+ визуальные элементы канала, ^ позиционирование колонок

--- a/DesktopClient/ui/qml.qrc
+++ b/DesktopClient/ui/qml.qrc
@@ -6,5 +6,6 @@
         <file>LeftArea.qml</file>
         <file>TopArea.qml</file>
         <file>BottomArea.qml</file>
+        <file>ChannelInfo.qml</file>
     </qresource>
 </RCC>
